--- a/all/themes/pixelgarage/less/pxlComponents/block-exposed-search-course-times.less
+++ b/all/themes/pixelgarage/less/pxlComponents/block-exposed-search-course-times.less
@@ -4,199 +4,30 @@
 
 // Variables
 // -------------------------
-@pxl-form-control-height: 36px;
+@pxl-form-control-height: 24px;
 
 // Mixins
 // -------------------------
-.modal() {
-  height: 100%;
-  overflow-y: hidden;
-
-  .modal-backdrop {
-    position:fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #222;
-
-    &.in {
-      opacity: 0.7;
-    }
-  }
-
-  .modal-dialog {
-    margin: 0 auto;
-    width: 100%;
-    height: 100%;
-
-    .admin-menu & {
-      margin: 29px auto 0;
-    }
-
-    .modal-content {
-      position: relative;
-      height: 100%;
-      padding: 0;
-      #pxl-mixins.border-radius(0);
-      border: none;
-      #pxl-mixins.box-shadow(none);
-
-      .modal-header {
-        padding: 0;
-        min-height: 60px;
-        border: none;
-
-        h2.modal-title {
-          font-family: @pxl-text-font-light;
-          font-size: 30px;
-          text-align: center;
-          color: @text-color;
-        }
-
-        button.close {
-          display: block;
-          position: absolute;
-          top: 15px;
-          right: 15px;
-          opacity: 1.0;
-          z-index: 1; // has to be above body
-
-          .modal-close {
-            display: inline-block;
-            width: 23px;
-            height: 23px;
-            background: #fff url("../images/popup_close.svg") no-repeat left top/contain;
-          }
-        }
-      }
-
-      .modal-body {
-        // content styled separately
-        padding: 20px 10px;
-      }
-    }
-  }
-}
-
 
 
 // General settings
 // -------------------------
-//
-// navigation region containing search form
-.region-navigation {
-  position: relative;
-}
 
-//
-// modal search dialog
-body.modal-open {
-  overflow: hidden;
-  // prevent background from scrolling on mobile devices
-  //position: fixed; // causes to jump on top of page, which is not wished for masonry view
-  -webkit-overflow-scrolling: touch;
-
-  #modal-exposed-search-form {
-    .modal();
-  }
-}
-
-
-//
-//  The exposed search form is shown in the navigation region (screen width > 640) or
-//  in a modal dialog for mobile devices.
-//
 .block-exposed-form-search-course-times {
-  .region-navigation & {
-    // place search form absolutely in navigation region
-    position: absolute;
-    left: 0;
-    bottom: 32px;
-    margin: 0;
-    width: 100%;
-
-    @media @narrow {
-      //bottom: 54px;
-    }
-  }
-
   form#views-exposed-form-course-times-search-page-search-course-times {
-    // search button to open modal dialog (mobiles only)
-    .btn-modal-search-form {
-      display: none;
-
-      .region-navigation & {
-        // show this button only in navigation region on mobile screens
-        display: block;
-        margin: 0 auto;
-        padding: 0;
-        border: none;
-        outline: none;
-
-        @media @header-breakpoint {
-          display: none;
-        }
-
-        span {
-          display: inline-block;
-          margin: 0 -2px;
-          height: @pxl-form-control-height;
-          padding: 7px 15px 10px;
-          font-family: @pxl-text-font;
-          font-size: (@font-size-base - 2);
-          //line-height: 1;
-          border: none;
-
-          &.button-text {
-            color: @pxl-color-gray-text;
-            #pxl-mixins.border-radius(0);
-            .border-left-radius(3px);
-            border: 1px solid @pxl-color-gray-border-light;
-            background: #fff none;
-          }
-
-          &.button-search {
-            color: #fff;
-            letter-spacing: 1px;
-            #pxl-mixins.border-radius(0);
-            .border-right-radius(3px);
-            border: 1px solid @pxl-color-bg-button;
-            background: @pxl-color-bg-button none;
-          }
-        }
-      }
-    }
-
     // exposed search form
     .views-exposed-form {
-      .region-navigation & {
-        // show in navigation region only on screens fulfilling header-breakpoint
-        display: none;
-
-        @media @header-breakpoint {
-          display: block;
-        }
-      }
-
       .views-exposed-widgets {
         margin: 0;
         width: 100%;
-        text-align: center;
+        text-align: left;
 
         .views-exposed-widget {
-          display: block;
+          display: inline-block;
           float: none;
-          margin: 0 auto 20px;
+          margin: 0 -3px 0 -1px;
           padding: 0;
-
-          @media @header-breakpoint {
-            // show inline search form in navigation section for bigger screens
-            display: inline-block;
-            margin: 0 -3px 0 -1px;
-            vertical-align: top;
-            //border-left: 1px solid @pxl-color-gray-border-light;
-          }
+          vertical-align: bottom;
 
           label {
             display: none;
@@ -222,18 +53,13 @@ body.modal-open {
                 margin: 0;
                 height: @pxl-form-control-height;
                 font-family: @pxl-text-font;
-                font-size: @font-size-base;
+                font-size: 14px;
                 color: @pxl-color-gray-dark;
-                #pxl-mixins.border-radius(3px);
+                #pxl-mixins.border-radius(0);
                 border: 1px solid @pxl-color-gray-border-light;
                 background-color: #fff;
                 #pxl-mixins.box-shadow(none);
                 .placeholder(@pxl-color-gray-text);
-
-                @media @header-breakpoint {
-                  #pxl-mixins.border-radius(0);
-                  //border: 1px solid rgba(0,0,0,0.0);
-                }
 
                 &:focus {
                   #pxl-mixins.box-shadow(inset 0 0 3px @pxl-color-gray-border-light);
@@ -241,125 +67,38 @@ body.modal-open {
                 }
 
                 &.form-text {
-                  padding: 3px 15px 6px;
+                  padding: 4px 15px 6px;
                 }
 
-                &.form-select {
-                  #pxl-mixins.no-appearance;
-                  padding: 3px 20px 6px 10px;
-                }
               }
-
-              // date popup
-              &.form-type-date-popup {
-                margin: 0;
-                width: 100%;
-
-                .date-padding {
-                  width: 100%;
-
-                  .form-item-field-course-date-value-value-date {
-                    width: 100%;
-
-                    input {
-                      width: 100%;
-                    }
-                  }
-                }
-              }
-
-              // see date-popup.less
             }
           }  // views-widget
 
           &.views-widget-filter-combine {
-            width: 90%;
+            width: 85%;
             //border: none;
 
-            @media @header-breakpoint {
-              width: 20%;
-              min-width: 150px;
-
-              .views-widget {
-                .form-item {
-                  .form-control {
-                    .border-left-radius(3px);
-                  }
-                }
-              }
-            }
-          }
-
-          &.views-widget-filter-field_segment_tid_1,
-          &.views-widget-filter-field_location_target_id{
-            width: 90%;
-
-            .views-widget {
-              // add a dropdown icon to the select box
-              position: relative;
-              .form-item {
-                &:after {
-                  content: '\f0d7';
-                  display: inline-block;
-                  position: absolute;
-                  top: 0;
-                  right: 5px;
-                  bottom: 0;
-                  font-family: @pxl-icon-font;
-                  color: @pxl-color-gray-dark;
-                  line-height: @pxl-form-control-height;
-                  pointer-events: none;
-                }
-              }
-            }
-
-            @media @header-breakpoint {
-              width: 12%;
-              min-width: 130px;
-            }
-          }
-
-          &.views-widget-filter-field_course_date_value {
-            width: 90%;
-
-            @media @header-breakpoint {
-              width: 10%;
-              min-width: 120px;
-              margin-left: 0;
-            }
-          }
-
-          &.views-widget-filter-field_address_locality {
-            width: 90%;
-
-            @media @header-breakpoint {
-              width: 10%;
-              min-width: 120px;
+            @media @menu-breakpoint {
+              width: 180px;
             }
           }
 
           &.views-submit-button {
+            overflow: hidden;
             border: none;
+            padding-left: 5px;
 
             button.form-submit {
               margin: 0;
+              padding: 0;
+              width: @pxl-form-control-height;
               height: @pxl-form-control-height;
-              padding: 7px 15px 10px;
-              font-family: @pxl-text-font;
-              font-size: @font-size-base;
-              color: #fff;
-              line-height: 1;
-              letter-spacing: @pxl-button-letter-spacing;
+              text-indent: 100%;
               border: none;
-              #pxl-mixins.border-radius(3px);
-              background: @pxl-color-bg-button;
-
-              @media @header-breakpoint {
-                .border-left-radius(0);
-              }
+              background: url(../images/icon-search.svg) no-repeat top center / contain;
 
               &:hover {
-                background: @pxl-color-bg-button-hover;
+                background: url(../images/icon-search-hover.svg) no-repeat top center / contain;
               }
             }
           }
