--- a/all/themes/pixelgarage/less/pxlComponents/node-webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-webform.less
@@ -154,23 +154,23 @@ form.webform-client-form {
   // all links
   .links(@pxl-color-hso-main);
 
-  body.kvcollege_section & {
+  body.segment_kv & {
     .links(@pxl-color-hso-kv);
   }
-  body.hscollege_section & {
+  body.segment_hs & {
     .links(@pxl-color-hso-hs);
   }
-  body.kscollege_section & {
-    .links(@pxl-color-hso-ks);
+  body.segment_wm & {
+    .links(@pxl-color-hso-wm);
   }
-  body.hfcollege_section & {
-    .links(@pxl-color-hso-hf);
+  body.segment_sp & {
+    .links(@pxl-color-hso-sp);
   }
-  body.fhcollege_section & {
-    .links(@pxl-color-hso-fh);
+  body.segment_wi & {
+    .links(@pxl-color-hso-wi);
   }
-  body.excollege_section & {
-    .links(@pxl-color-hso-ex);
+  body.segment_pp & {
+    .links(@pxl-color-hso-pp);
   }
 
   //
@@ -315,29 +315,29 @@ form.webform-client-form {
       border: 1px solid @pxl-color-hso-main;
       .box-shadow(inset 0 0 3px @pxl-color-hso-main);
 
-      body.kvcollege_section & {
+      body.segment_kv & {
         border: 1px solid @pxl-color-hso-kv;
         .box-shadow(inset 0 0 3px @pxl-color-hso-kv);
       }
-      body.hscollege_section & {
+      body.segment_hs & {
         border: 1px solid @pxl-color-hso-hs;
         .box-shadow(inset 0 0 3px @pxl-color-hso-hs);
       }
-      body.kscollege_section & {
-        border: 1px solid @pxl-color-hso-ks;
-        .box-shadow(inset 0 0 3px @pxl-color-hso-ks);
+      body.segment_wm & {
+        border: 1px solid @pxl-color-hso-wm;
+        .box-shadow(inset 0 0 3px @pxl-color-hso-wm);
       }
-      body.hfcollege_section & {
-        border: 1px solid @pxl-color-hso-hf;
-        .box-shadow(inset 0 0 3px @pxl-color-hso-hf);
+      body.segment_sp & {
+        border: 1px solid @pxl-color-hso-sp;
+        .box-shadow(inset 0 0 3px @pxl-color-hso-sp);
       }
-      body.fhcollege_section & {
-        border: 1px solid @pxl-color-hso-fh;
-        .box-shadow(inset 0 0 3px @pxl-color-hso-fh);
+      body.segment_wi & {
+        border: 1px solid @pxl-color-hso-wi;
+        .box-shadow(inset 0 0 3px @pxl-color-hso-wi);
       }
-      body.excollege_section & {
-        border: 1px solid @pxl-color-hso-ex;
-        .box-shadow(inset 0 0 3px @pxl-color-hso-ex);
+      body.segment_pp & {
+        border: 1px solid @pxl-color-hso-pp;
+        .box-shadow(inset 0 0 3px @pxl-color-hso-pp);
       }
     }
 
@@ -367,23 +367,23 @@ form.webform-client-form {
         outline: none;
         border: 1px solid @pxl-color-hso-main;
 
-        body.kvcollege_section & {
+        body.segment_kv & {
           border: 1px solid @pxl-color-hso-kv;
         }
-        body.hscollege_section & {
+        body.segment_hs & {
           border: 1px solid @pxl-color-hso-hs;
         }
-        body.kscollege_section & {
-          border: 1px solid @pxl-color-hso-ks;
+        body.segment_wm & {
+          border: 1px solid @pxl-color-hso-wm;
         }
-        body.hfcollege_section & {
-          border: 1px solid @pxl-color-hso-hf;
+        body.segment_sp & {
+          border: 1px solid @pxl-color-hso-sp;
         }
-        body.fhcollege_section & {
-          border: 1px solid @pxl-color-hso-fh;
+        body.segment_wi & {
+          border: 1px solid @pxl-color-hso-wi;
         }
-        body.excollege_section & {
-          border: 1px solid @pxl-color-hso-ex;
+        body.segment_pp & {
+          border: 1px solid @pxl-color-hso-pp;
         }
       }
     }
@@ -572,23 +572,23 @@ form.webform-client-form {
       min-width: 50%;
       .resp-submit-button(#fff, @pxl-color-hso-main);
 
-      body.kvcollege_section & {
+      body.segment_kv & {
         .resp-submit-button(#fff, @pxl-color-hso-kv);
       }
-      body.hscollege_section & {
+      body.segment_hs & {
         .resp-submit-button(#fff, @pxl-color-hso-hs);
       }
-      body.kscollege_section & {
-        .resp-submit-button(#fff, @pxl-color-hso-ks);
+      body.segment_wm & {
+        .resp-submit-button(#fff, @pxl-color-hso-wm);
       }
-      body.hfcollege_section & {
-        .resp-submit-button(#fff, @pxl-color-hso-hf);
+      body.segment_sp & {
+        .resp-submit-button(#fff, @pxl-color-hso-sp);
       }
-      body.fhcollege_section & {
-        .resp-submit-button(#fff, @pxl-color-hso-fh);
+      body.segment_wi & {
+        .resp-submit-button(#fff, @pxl-color-hso-wi);
       }
-      body.excollege_section & {
-        .resp-submit-button(#fff, @pxl-color-hso-ex);
+      body.segment_pp & {
+        .resp-submit-button(#fff, @pxl-color-hso-pp);
       }
     }
   }
