--- a/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
+++ b/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
@@ -21,6 +21,7 @@
 @import "node-webform";
 @import "node-course";
 @import "node-location";
+@import "node-call2action";
 @import "user-profile";
 @import "node-brochure";
 @import "node-news";
