--- a/all/themes/pixelgarage/less/pxlComponents/view-bildungsnavigator.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-bildungsnavigator.less
@@ -254,16 +254,16 @@ body.page-bildungsnavigator {
     .specific-course_item(#fbc895; @pxl-color-hso-hs);
   }
   .course_item.tid_3 {
-    .specific-course_item(#cbc6df; @pxl-color-hso-ks);
+    .specific-course_item(#cbc6df; @pxl-color-hso-wm);
   }
   .course_item.tid_108 {
-    .specific-course_item(#cbc6df; @pxl-color-hso-hf);
+    .specific-course_item(#cbc6df; @pxl-color-hso-sp);
   }
   .course_item.tid_109 {
-    .specific-course_item(#cbc6df; @pxl-color-hso-fh);
+    .specific-course_item(#cbc6df; @pxl-color-hso-wi);
   }
   .course_item.tid_4 {
-    .specific-course_item(#dcd7cd; @pxl-color-hso-ex);
+    .specific-course_item(#dcd7cd; @pxl-color-hso-pp);
   }
 
 }
