--- a/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-course-times.less
@@ -198,23 +198,23 @@
                 outline: none;
                 border: 1px solid @pxl-color-hso-main;
 
-                body.kvcollege_section & {
+                body.segment_kv & {
                   border: 1px solid @pxl-color-hso-kv;
                 }
-                body.hscollege_section & {
+                body.segment_hs & {
                   border: 1px solid @pxl-color-hso-hs;
                 }
-                body.kscollege_section & {
-                  border: 1px solid @pxl-color-hso-ks;
+                body.segment_wm & {
+                  border: 1px solid @pxl-color-hso-wm;
                 }
-                body.hfcollege_section & {
-                  border: 1px solid @pxl-color-hso-hf;
+                body.segment_sp & {
+                  border: 1px solid @pxl-color-hso-sp;
                 }
-                body.fhcollege_section & {
-                  border: 1px solid @pxl-color-hso-fh;
+                body.segment_wi & {
+                  border: 1px solid @pxl-color-hso-wi;
                 }
-                body.excollege_section & {
-                  border: 1px solid @pxl-color-hso-ex;
+                body.segment_pp & {
+                  border: 1px solid @pxl-color-hso-pp;
                 }
               }
             }
