--- a/all/themes/pixelgarage/less/pxlComponents/view-courses.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-courses.less
@@ -29,23 +29,23 @@
           color: @text-color;
           line-height: 1;
 
-          body.kvcollege_section & {
+          body.segment_kv & {
             color: @pxl-color-hso-kv;
           }
-          body.hscollege_section & {
+          body.segment_hs & {
             color: @pxl-color-hso-hs;
           }
-          body.kscollege_section & {
-            color: @pxl-color-hso-ks;
+          body.segment_wm & {
+            color: @pxl-color-hso-wm;
           }
-          body.hfcollege_section & {
-            color: @pxl-color-hso-hf;
+          body.segment_sp & {
+            color: @pxl-color-hso-sp;
           }
-          body.fhcollege_section & {
-            color: @pxl-color-hso-fh;
+          body.segment_wi & {
+            color: @pxl-color-hso-wi;
           }
-          body.excollege_section & {
-            color: @pxl-color-hso-ex;
+          body.segment_pp & {
+            color: @pxl-color-hso-pp;
           }
         }
       }
@@ -152,23 +152,23 @@
               }
             }
           }
-          body.kvcollege_section &:hover {
+          body.segment_kv &:hover {
             background-color: @pxl-color-hso-kv;
           }
-          body.hscollege_section &:hover {
+          body.segment_hs &:hover {
             background-color: @pxl-color-hso-hs;
           }
-          body.kscollege_section &:hover {
-            background-color: @pxl-color-hso-ks;
+          body.segment_wm &:hover {
+            background-color: @pxl-color-hso-wm;
           }
-          body.hfcollege_section &:hover {
-            background-color: @pxl-color-hso-hf;
+          body.segment_sp &:hover {
+            background-color: @pxl-color-hso-sp;
           }
-          body.fhcollege_section &:hover {
-            background-color: @pxl-color-hso-fh;
+          body.segment_wi &:hover {
+            background-color: @pxl-color-hso-wi;
           }
-          body.excollege_section &:hover {
-            background-color: @pxl-color-hso-ex;
+          body.segment_pp &:hover {
+            background-color: @pxl-color-hso-pp;
           }
 
         }
@@ -181,29 +181,29 @@
             color: @text-color-light;
             border: none;
 
-            body.kvcollege_section & {
+            body.segment_kv & {
               border-top: 1px solid @pxl-color-hso-kv;
               border-bottom: 1px solid @pxl-color-hso-kv;
             }
-            body.hscollege_section & {
+            body.segment_hs & {
               border-top: 1px solid @pxl-color-hso-hs;
               border-bottom: 1px solid @pxl-color-hso-hs;
             }
-            body.kscollege_section & {
-              border-top: 1px solid @pxl-color-hso-ks;
-              border-bottom: 1px solid @pxl-color-hso-ks;
+            body.segment_wm & {
+              border-top: 1px solid @pxl-color-hso-wm;
+              border-bottom: 1px solid @pxl-color-hso-wm;
             }
-            body.hfcollege_section & {
-              border-top: 1px solid @pxl-color-hso-hf;
-              border-bottom: 1px solid @pxl-color-hso-hf;
+            body.segment_sp & {
+              border-top: 1px solid @pxl-color-hso-sp;
+              border-bottom: 1px solid @pxl-color-hso-sp;
             }
-            body.fhcollege_section & {
-              border-top: 1px solid @pxl-color-hso-fh;
-              border-bottom: 1px solid @pxl-color-hso-fh;
+            body.segment_wi & {
+              border-top: 1px solid @pxl-color-hso-wi;
+              border-bottom: 1px solid @pxl-color-hso-wi;
             }
-            body.excollege_section & {
-              border-top: 1px solid @pxl-color-hso-ex;
-              border-bottom: 1px solid @pxl-color-hso-ex;
+            body.segment_pp & {
+              border-top: 1px solid @pxl-color-hso-pp;
+              border-bottom: 1px solid @pxl-color-hso-pp;
             }
           }
         }
