--- a/all/themes/pixelgarage/less/pxlComponents/view-segment-pages.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-segment-pages.less
@@ -29,23 +29,23 @@
       display: inline-block;
       padding-right: 15px;
 
-      body.kvcollege_section & {
+      body.segment_kv & {
         .links(@pxl-color-hso-kv);
       }
-      body.hscollege_section & {
+      body.segment_hs & {
         .links(@pxl-color-hso-hs);
       }
-      body.kscollege_section & {
-        .links(@pxl-color-hso-ks);
+      body.segment_wm & {
+        .links(@pxl-color-hso-wm);
       }
-      body.hfcollege_section & {
-        .links(@pxl-color-hso-hf);
+      body.segment_sp & {
+        .links(@pxl-color-hso-sp);
       }
-      body.fhcollege_section & {
-        .links(@pxl-color-hso-fh);
+      body.segment_wi & {
+        .links(@pxl-color-hso-wi);
       }
-      body.excollege_section & {
-        .links(@pxl-color-hso-ex);
+      body.segment_pp & {
+        .links(@pxl-color-hso-pp);
       }
     }
   }
