--- a/all/themes/pixelgarage/less/variable-overrides.less
+++ b/all/themes/pixelgarage/less/variable-overrides.less
@@ -7,14 +7,14 @@
 
 //== Colors
 //
-@pxl-color-hso-main: rgb(204, 51, 51);
+@pxl-color-hso-main: rgb(204, 51, 51); //#cc3333
 @pxl-color-hso-sec:  rgb(240, 240, 235);
 @pxl-color-hso-kv: #8C9D44; // rgb(149, 186, 64);
 @pxl-color-hso-hs: #D09D15; //rgb(232, 116, 49);
-@pxl-color-hso-ks: #7C0B25; //rgb(120, 114, 159);
-@pxl-color-hso-hf: #335592; //rgb(138, 133, 184);
-@pxl-color-hso-fh: #3F5868; //rgb(100, 96, 133);
-@pxl-color-hso-ex: #7B6C65; //rgb(177, 168, 149);
+@pxl-color-hso-wm: #7C0B25; //rgb(120, 114, 159);
+@pxl-color-hso-sp: #B2CCD8; //#d82a33; #335592; //rgb(138, 133, 184);
+@pxl-color-hso-wi: #3F5868; //rgb(100, 96, 133);
+@pxl-color-hso-pp: #7B6C65; //rgb(177, 168, 149);
 @pxl-color-hso-gray: rgb(235,235,235);
 @pxl-color-hso-kv-menu: #8C9D44; // rgb(168, 212, 73);
 @pxl-color-hso-hs-menu: #D09D15; // rgb(255, 120, 40);
