--- a/all/themes/pixelgarage/less/mixins/box-modifications.less
+++ b/all/themes/pixelgarage/less/mixins/box-modifications.less
@@ -33,7 +33,7 @@
   }
 
   // centers an element horizontally/vertically in its container (block with height)
-  .center-horizontally {
+  .center-horizontally() {
     position: relative;
     left: 50%;
     -webkit-transform: translateX(-50%);
@@ -41,12 +41,21 @@
     transform: translateX(-50%);
   }
 
-  .center-vertically {
-    position: relative;
+  .center-vertically(@position: relative) {
+    position: @position;
     top: 50%;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
+  }
+
+  .center-xy(@position: absolute) {
+    position: @position;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
   }
 
   // aligns an element vertically in its container (block with height)
