--- a/all/themes/pixelgarage/less/mixins/general.less
+++ b/all/themes/pixelgarage/less/mixins/general.less
@@ -66,7 +66,7 @@
     letter-spacing: @pxl-button-letter-spacing;
     color: #fff;
     border: none;
-    #pxl-mixins.border-radius(3px);
+    #pxl-mixins.border-radius(0);
     background: @pxl-color-bg-button;
 
     &:hover {
