--- a/all/themes/pixelgarage/less/pxlComponents/view-contacts.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-contacts.less
@@ -156,23 +156,23 @@
               }
             }
 
-            body.kvcollege_section & {
+            body.segment_kv & {
               .segment-color(@pxl-color-hso-kv);
             }
-            body.hscollege_section & {
+            body.segment_hs & {
               .segment-color(@pxl-color-hso-hs);
             }
-            body.kscollege_section & {
-              .segment-color(@pxl-color-hso-ks);
+            body.segment_wm & {
+              .segment-color(@pxl-color-hso-wm);
             }
-            body.hfcollege_section & {
-              .segment-color(@pxl-color-hso-hf);
+            body.segment_sp & {
+              .segment-color(@pxl-color-hso-sp);
             }
-            body.fhcollege_section & {
-              .segment-color(@pxl-color-hso-fh);
+            body.segment_wi & {
+              .segment-color(@pxl-color-hso-wi);
             }
-            body.excollege_section & {
-              .segment-color(@pxl-color-hso-ex);
+            body.segment_pp & {
+              .segment-color(@pxl-color-hso-pp);
             }
 
           }  //tab-pane-item
